Fix project cards on mobile

--- a/styles/Project.module.css
+++ b/styles/Project.module.css
@@ -23,7 +23,7 @@
     grid-auto-columns: 1fr;
     grid-auto-rows: 1fr;
     grid-auto-flow: column;
-    row-gap: 4rem;
+    row-gap: 2rem;
     padding: 1rem;
     height: 100%;
     margin-top: 6rem;
@@ -48,7 +48,7 @@
 }
 
 .projCard {
-    margin: 3rem;
+    margin: 2rem;
 }
 
 .projCardTitle {
@@ -105,6 +105,8 @@
 
     .projBox {
         width: 80vw;
+        height: 100%;
+        padding: 2rem 0.5rem 2rem 0.5rem;
     }
 }
 
